--- a/app/src/main/res/layout/content_search_screen.xml
+++ b/app/src/main/res/layout/content_search_screen.xml
@@ -19,6 +19,7 @@
             android:layout_margin="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/nav_item_back"
             android:src="@drawable/ic_keyboard_backspace_24dp"/>
 
         <ImageView
@@ -27,14 +28,20 @@
             android:layout_marginRight="7dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/action_search"
             android:src="@drawable/ic_search_black_24dp" />
 
-        <android.support.design.widget.TextInputEditText
+        <android.support.design.widget.TextInputLayout
             android:id="@+id/editable_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColorHint="#BDBDBD"
-            android:textStyle="italic" />
+            android:layout_height="wrap_content">
+            <AutoCompleteTextView
+                android:id="@+id/atv_autocomplete_fav_item_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColorHint="#BDBDBD"
+                android:textStyle="italic" />
+        </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
 
@@ -44,12 +51,12 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         app:pstsIndicatorColor="@color/colorAccent"
-        app:pstsShouldExpand="true"></com.astuetz.PagerSlidingTabStrip>
+        app:pstsShouldExpand="true"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"></android.support.v4.view.ViewPager>
+        android:background="@android:color/white"/>
 </LinearLayout>
 
