--- a/app/src/main/res/layout/bus_lines_list_view_row.xml
+++ b/app/src/main/res/layout/bus_lines_list_view_row.xml
@@ -2,16 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="50dp"
+    android:gravity="center_vertical|center_horizontal|center"
+    android:layout_gravity="center_horizontal|center_vertical|center">
 
     <ImageView
         android:id="@+id/bus_lines_image_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"/>
 
     <TextView
-        android:textColor="@android:color/holo_blue_dark"
         android:id="@+id/bus_lines_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical|center"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="16dp"/>
 </LinearLayout>
