--- a/app/src/main/res/layout/content_search_screen.xml
+++ b/app/src/main/res/layout/content_search_screen.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:contentDescription="@string/nav_item_back"
+            android:onClick="onBackClicked"
             android:src="@drawable/ic_keyboard_backspace_24dp" />
 
 
