--- a/app/src/main/res/menu/menu_home_screen.xml
+++ b/app/src/main/res/menu/menu_home_screen.xml
@@ -50,4 +50,9 @@
         android:orderInCategory="100"
         android:title="@string/action_map_find_stations"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_loc_pick"
+        android:orderInCategory="100"
+        android:title="@string/action_map_find_stations"
+        app:showAsAction="never"/>
 </menu>
